--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -83,7 +83,10 @@ html, body {
 
   // This is the logo at the top of the ToC
   &>img {
-    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:1em;
+  display: block;
   }
 
   &>.search {
@@ -101,6 +104,23 @@ html, body {
       color: $nav-text;
       border-radius: 0; /* ios has a default border radius */
     }
+	
+	/* do not group these rules */
+	*::-webkit-input-placeholder {
+	    color: #fff;
+	}
+	*:-moz-placeholder {
+	    /* FF 4-18 */
+	    color: #fff;
+	}
+	*::-moz-placeholder {
+	    /* FF 19+ */
+	    color: #fff;
+	}
+	*:-ms-input-placeholder {
+	    /* IE 10+ */
+	    color: #fff;
+	}
 
     &:before {
       position: absolute;
@@ -340,7 +360,6 @@ html, body {
     padding: 0 $main-padding;
     box-sizing: border-box;
     display: block;
-    @include text-shadow($main-embossed-text-shadow);
 
     @extend %left-col;
   }
@@ -363,6 +382,7 @@ html, body {
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
     border-top: 1px solid #ddd;
+	color: #656565;
     background-image: linear-gradient(to bottom, #fff, #f9f9f9);
   }
 
@@ -471,7 +491,6 @@ html, body {
   aside {
     padding-top: 1em;
     padding-bottom: 1em;
-    @include text-shadow(0 1px 0 lighten($aside-notice-bg, 15%));
     margin-top: 1.5em;
     margin-bottom: 1.5em;
     background: $aside-notice-bg;
@@ -479,12 +498,10 @@ html, body {
 
     &.warning {
       background-color: $aside-warning-bg;
-      @include text-shadow(0 1px 0 lighten($aside-warning-bg, 15%));
     }
 
     &.success {
       background-color: $aside-success-bg;
-      @include text-shadow(0 1px 0 lighten($aside-success-bg, 15%));
     }
   }
 
@@ -511,7 +528,6 @@ html, body {
     margin: -2px;
     border-radius: 4px;
     border: 1px solid #F7E633;
-    @include text-shadow(1px 1px 0 #666);
     background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
   }
 }
@@ -534,7 +550,6 @@ html, body {
     clear:right;
 
     box-sizing: border-box;
-    @include text-shadow(0px 1px 2px rgba(0,0,0,0.4));
 
     @extend %right-col;
 
